feat: init webpack.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>alw2</h1>
-  <a href="./building-1.html">123</a>
+  <a href="./building-1.html">building-1</a>
 </body>
 </html>
