feat: 1-model example.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>alw2</h1>
-  <a href="./building-1.html">building-1</a>
+  <h1>threejs例子</h1>
+  <h2>项目例子（有待完成）</h2>
+  <h2>基础例子（正在做）</h2>
+  <a href="./1-model.html">1-模型</a>
 </body>
 </html>
