feat: add points flow

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
   <h2>项目例子（有待完成）</h2>
   <h2>基础例子（正在做）</h2>
   <a href="./1-model.html">1-模型</a>
+  <h2>其它例子</h2>
+  <a href="./points-flow.html">点流动</a>
 </body>
 </html>
