feat： 添加 拆解示例

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
   <h1>threejs例子</h1>
-  <h2>项目例子（有待完成）</h2>
-  <h2>基础例子（正在做）</h2>
+  <h2>项目demo（正在做）</h2>
+  <a href="./a-dismantling.html">a-模型拆解效果</a>
+  <h2>基础知识demo（正在做）</h2>
   <a href="./1-model.html">1-模型</a>
-  <h2>其它例子</h2>
+  <h2>其它例子（正在做）</h2>
   <a href="./points-flow.html">点流动</a>
 </body>
 </html>
