--- a/src/other-example/points-flow/index.html
+++ b/src/other-example/points-flow/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>threejs-example 1-model</title>
+		<title>threejs-example other example : points flow</title>
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
