fix: 修复 utf-8显示异常问题

--- a/src/project-demo/a-dismantling/index.html
+++ b/src/project-demo/a-dismantling/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>threejs-example project demo: points-model</title>
 		<style>
 			body { margin: 0; }
