--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <a href="./a-dismantling.html">a-模型拆解效果</a>
   <h2>基础知识demo（正在做）</h2>
   <a href="./1-model.html">1-模型</a>
+  <a href="./3-light-trail.html">3-光线痕迹</a>
   <h2>其它例子（正在做）</h2>
   <a href="./points-flow.html">点流动</a>
 </body>
