feat: 3 光迹 添加bloom效果。

--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    .item{
+      margin: 10px;;
+    }
+  </style>
 </head>
 <body>
   <h1>threejs例子</h1>
   <h2>项目demo（正在做）</h2>
-  <a href="./a-dismantling.html">a-模型拆解效果</a>
+  <div class="item">
+   <a href="./a-dismantling.html">a-模型拆解效果</a>
+
+  </div>
   <h2>基础知识demo（正在做）</h2>
-  <a href="./1-model.html">1-模型</a>
-  <a href="./3-light-trail.html">3-光线痕迹</a>
+  <div class="item">
+    <a href="./1-model.html">1-模型</a>
+  </div>
+  <div class="item">
+    <a href="./3-light-trail.html">3-光线痕迹</a>
+  </div>
   <h2>其它例子（正在做）</h2>
-  <a href="./points-flow.html">点流动</a>
+  
+  <div class="item">
+    <a href="./points-flow.html">点流动</a>
+  </div>
 </body>
 </html>
