feat: 添加 b-city 智慧城市

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
    <a href="./a-dismantling.html">a-模型拆解效果</a>
 
   </div>
+  <div class="item">
+    <a href="./b-city.html">b-智慧城市</a>
+ 
+   </div>
   <h2>基础知识demo（正在做）</h2>
   <div class="item">
     <a href="./1-model.html">1-模型</a>
