--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,9 @@
   <div class="item">
     <a href="./3-light-trail.html">3-光线痕迹</a>
   </div>
+  <div class="item">
+    <a href="./4-animation.html">4-动画</a>
+  </div>
   <h2>其它例子（正在做）</h2>
   
   <div class="item">
