--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
   <div class="item">
     <a href="./4-animation.html">4-动画</a>
   </div>
+  <div class="item">
+    <a href="./5-animation-picture.html">5-3D动态图</a>
+  </div>
   <h2>其它例子（正在做）</h2>
   
   <div class="item">
