feat: b-智慧城市 项目 添加告警图标。

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <a href="./4-animation.html">4-动画</a>
   </div>
   <div class="item">
-    <a href="./5-animation-picture.html">5-3D动态图</a>
+    <a href="./5-animation-picture.html">5-显示动态图</a>
   </div>
   <h2>其它例子（正在做）</h2>
   
