--- a/src/project-demo/b-city/index.html
+++ b/src/project-demo/b-city/index.html
@@ -3,7 +3,10 @@
 		<meta charset="UTF-8">
 		<title>threejs-example project demo: points-model</title>
 		<style>
-			body { margin: 0; }
+			body { 
+				margin: 0;
+				background: black;
+			}
 			canvas { display: block; }
 			.icon{
 				width:36px;
@@ -27,6 +30,7 @@
 		</style>
 	</head>
 	<body>
+		<div id="loadingText" style="color: white;">加载中...</div>
 		<img id="warnIcon" alt="warn" class="icon twinkle" src="/static/img/warn.svg" >
 	</body>
 </html>
