--- a/src/index.html
+++ b/src/index.html
@@ -6,39 +6,69 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
+    body{
+      background: lightgray;
+    }
     .item{
-      margin: 10px;;
+      margin: 10px;
+
+    }
+    .item a{
+      margin-top:10px;
+      font-size: 32px;
+    }
+
+    .item img{
+      width:512px;
+      height:512px;
+    }
+    .container{
+      display: flex;
+    }
+    .container .item{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>threejs例子</h1>
-  <h2>项目demo（正在做）</h2>
-  <div class="item">
-   <a href="./a-dismantling.html">a-模型拆解效果</a>
-
-  </div>
-  <div class="item">
-    <a href="./b-city.html">b-智慧城市</a>
- 
-   </div>
-  <h2>基础知识demo（正在做）</h2>
-  <div class="item">
-    <a href="./1-model.html">1-模型</a>
-  </div>
-  <div class="item">
-    <a href="./3-light-trail.html">3-光线痕迹</a>
-  </div>
-  <div class="item">
-    <a href="./4-animation.html">4-动画</a>
-  </div>
-  <div class="item">
-    <a href="./5-animation-picture.html">5-显示动态图</a>
-  </div>
-  <h2>其它例子（正在做）</h2>
+  <h2>项目demo（持续更新中...）</h2>
+  <div class="container">
+    <div class="item">
+      <img src="/static/img/a-dismantling.png" >
+     <a href="./a-dismantling.html">a-模型拆解效果</a>
   
-  <div class="item">
-    <a href="./points-flow.html">点流动</a>
+    </div>
+    <div class="item">
+      <img src="/static/img/b-city.png" >
+      <a href="./b-city.html">b-智慧城市</a>
+     </div>
   </div>
+
+  <h2>基础知识demo（持续更新中...）</h2>
+  <div>
+    <div class="item">
+      <a href="./1-model.html">1-模型</a>
+    </div>
+    <div class="item">
+      <a href="./3-light-trail.html">3-光线痕迹</a>
+    </div>
+    <div class="item">
+      <a href="./4-animation.html">4-动画</a>
+    </div>
+    <div class="item">
+      <a href="./5-animation-picture.html">5-显示动态图</a>
+    </div>
+  </div>
+
+  <h2>其它例子（持续更新中...）</h2>
+  <div >
+    <div class="item">
+      <a href="./points-flow.html">点流动</a>
+    </div>
+  </div>
+  
+
 </body>
 </html>
