feat: 添加 6-屏幕坐标转换，添加github跳转图标。

--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,16 @@
       flex-direction: column;
       text-align: center;
     }
+
   </style>
 </head>
 <body>
+  <div style="position: absolute;right:5px;top:5px; background-color:black;">
+    <a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
+      <img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+    </a>
+  </div>
+
   <h2>项目demo（持续更新中...）</h2>
   <div class="container">
     <div class="item">
@@ -59,6 +66,9 @@
     </div>
     <div class="item">
       <a href="./5-animation-picture.html">5-显示动态图</a>
+    </div>
+    <div class="item">
+      <a href="./6-calculate-position.html">6-计算坐标</a>
     </div>
   </div>
 
