--- a/src/project-demo/a-dismantling/index.html
+++ b/src/project-demo/a-dismantling/index.html
@@ -44,6 +44,11 @@
 		</style>
 	</head>
 	<body>
+		<div style="position: absolute;right:5px;top:5px; background-color:black;">
+			<a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
+				<img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+			</a>
+		</div>
 		<div id="loadingText" style="color: white;">加载中...</div>
 		<div class="button-container">
 			<button id="dismantling"> 拆解</button>
