--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
   <h2>基础知识demo（持续更新中...）</h2>
   <div>
     <div class="item">
-      <a href="./1-model.html">1-模型</a>
+      <a href="./1-model.html">1-模型制作</a>
     </div>
     <div class="item">
       <a href="./3-light-trail.html">3-光线痕迹</a>
@@ -68,7 +68,7 @@
       <a href="./5-animation-picture.html">5-显示动态图</a>
     </div>
     <div class="item">
-      <a href="./6-calculate-position.html">6-计算坐标</a>
+      <a href="./6-calculate-position.html">6-屏幕坐标转换</a>
     </div>
   </div>
 
