feat: 添加7 开关门 修改不动点。

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,9 @@
     <div class="item">
       <a href="./6-calculate-position.html">6-屏幕坐标转换</a>
     </div>
+    <div class="item">
+      <a href="./7-open-door.html">7-开关门(修改不动点)</a>
+    </div>
   </div>
 
   <h2>其它例子（持续更新中...）</h2>
