--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,9 @@
     <div class="item">
       <a href="./7-open-door.html">7-开关门(修改不动点)</a>
     </div>
+    <div class="item">
+      <a href="./8-focus.html">8-聚焦靠近</a>
+    </div>
   </div>
 
   <h2>其它例子（持续更新中...）</h2>
