--- a/src/project-demo/a-dismantling/index.html
+++ b/src/project-demo/a-dismantling/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>threejs-example project demo: points-model</title>
+		<title>threejs-example project demo: a-dismantling</title>
 		<style>
 			body { 
 				margin: 0;
