--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="item">
-      <img src="/static/img/b-city.png" >
+      <img src="/static/img/c-datacenter.png" >
       <a href="./c-datacenter.html">c-数据中心</a>
     </div>
 
