--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <style>
     body{
       background: lightgray;
+      
     }
     .item{
       margin: 10px;
@@ -16,11 +17,16 @@
     .item a{
       margin-top:10px;
       font-size: 32px;
+      background: #2eafecb3;
+      padding: 10px;
+      border-radius: 10px;
+      color: #383232;
+      text-decoration: none;
     }
 
     .item img{
-      width:512px;
-      height:512px;
+      width:256px;
+      height:256px;
     }
     .container{
       display: flex;
@@ -60,7 +66,7 @@
   </div>
 
   <h2>基础知识demo（持续更新中...）</h2>
-  <div>
+  <div style="display: flex;">
     <div class="item">
       <a href="./1-model.html">1-模型制作</a>
     </div>
