feat: 添加 极限测试-渲染数量

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,9 @@
     <div class="item">
       <a href="./points-flow.html">点流动</a>
     </div>
+    <div class="item">
+      <a href="./limit-test-geometry.html">极限测试-渲染数量</a>
+    </div>
   </div>
   
 
