--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,142 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-    body{
-      background: lightgray;
-      
+    body {
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      overflow: auto;
+      background: linear-gradient(90deg, rgba(0,41,69,1) 6%, rgb(53, 0, 56) 29%, rgba(7,33,71,1) 84%);
+      color:#ccc;
     }
-    .item{
-      margin: 10px;
+    .row{
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .row-title{
+      background: #0a0d63d4;
+      width: fit-content;
+      margin: 10px auto;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    .background-container {
+      width:100%;
+      height: 100%;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      perspective: 50px;
+      animation: zooming 10s ease-in-out infinite;
+      z-index: -1;
+    }
+    .frame {
+      width: 900px;
+      height: 900px;
+      position: absolute;
+      border-radius: 50px;
+      border: 5px #087be6 solid;
+      box-shadow: 
+      0px 0px 20px #00ccff,
+      inset 0px 0px 20px #00ccff,
+      0px 0px 60px #ff00c8,
+      inset 0px 0px 60px #ff00c8;
+      filter:brightness(1.5) contrast(3);
+      animation: breathing 3s ease-out infinite;
+    }
+    .frame:nth-child(1) {
+      transform: rotate(40deg) translateY(0px) translateZ(0px);
+      opacity: 1.00;
+      animation-delay: 0.1s;
+    }
+    .frame:nth-child(2) {
+      transform: rotate(40deg) translateY(50px) translateZ(-10px);
+      opacity: 0.9;
+      animation-delay: 0.3s;
+    }
+    .frame:nth-child(3) {
+      transform: rotate(40deg) translateY(100px) translateZ(-20px);
+      opacity: 0.85;
+      animation-delay: 0.5s;
+    }
+    .frame:nth-child(4) {
+      transform: rotate(40deg) translateY(150px) translateZ(-30px);
+      opacity: 0.80;
+      animation-delay: 0.7s;
+    }
+    .frame:nth-child(5) {
+      transform: rotate(40deg) translateY(200px) translateZ(-40px);
+      opacity: 0.75;
+      animation-delay: 0.9s;
+    }
+    .frame:nth-child(6) {
+      transform: rotate(40deg) translateY(250px) translateZ(-50px);
+      opacity: 0.70;
+      animation-delay: 1.1s;
+    }
+    .frame:nth-child(7) {
+      transform: rotate(40deg) translateY(300px) translateZ(-60px);
+      opacity: 0.65;
+      animation-delay: 1.3s;
+    }
+    .frame:nth-child(8) {
+      transform: rotate(40deg) translateY(350px) translateZ(-70px);
+      opacity: 0.6;
+      animation-delay: 1.5s;
+    }
+    .frame:nth-child(9) {
+      transform: rotate(40deg) translateY(400px) translateZ(-80px);
+      opacity: 0.5;
+      animation-delay: 1.7s;
+    }
+    .frame:nth-child(10) {
+      transform: rotate(40deg) translateY(450px) translateZ(-90px);
+      opacity: 0.4;
+      animation-delay: 1.9s;
+    }
+    .frame:nth-child(11) {
+      transform: rotate(40deg) translateY(500px) translateZ(-100px);
+      opacity: 0.3;
+      animation-delay: 2.1s;
+    }
+    .frame:nth-child(12) {
+      transform: rotate(40deg) translateY(550px) translateZ(-110px);
+      opacity: 0.2;
+      animation-delay: 2.3s;
+    }
+    .frame:nth-child(13) {
+      transform: rotate(40deg) translateY(600px) translateZ(-120px);
+      opacity: 0.1;
+      animation-delay: 2.5s;
+    }
+    .frame:nth-child(14) {
+      transform: rotate(40deg) translateY(650px) translateZ(-130px);
+      opacity: 0.05;
+      animation-delay: 2.7s;
+    }
+    @keyframes breathing {
+      0% {filter: brightness(1.5) contrast(3);}
+      50% {filter: brightness(1.1) contrast(2);}
+      100% {filter: brightness(1.5) contrast(3);}
+    }
+    @keyframes zooming {
+      0% {perspective: 45px;}
+      50% {perspective: 50px;}
+      100% {perspective: 45px;}
+    }
 
+    .item{
+      margin: 15px;
+      width: fit-content;
     }
     .item a{
       margin-top:10px;
-      font-size: 32px;
-      background: #2eafecb3;
+      font-size: 24px;
+      background: #0a0d63d4;
       padding: 10px;
       border-radius: 10px;
-      color: #383232;
+      color: #ccc;
       text-decoration: none;
     }
 
@@ -40,13 +161,30 @@
   </style>
 </head>
 <body>
+  <div class="background-container">
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+    <div class="frame"></div>
+  </div>
+  
   <div style="position: absolute;right:5px;top:5px; background-color:black;">
     <a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
       <img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
     </a>
   </div>
 
-  <h2>项目demo（持续更新中...）</h2>
+  <h2 class="row-title">项目demo（持续更新中...）</h2>
   <div class="container">
     <div class="item">
       <img src="/static/img/a-dismantling.png" >
@@ -65,8 +203,8 @@
 
   </div>
 
-  <h2>基础知识demo（持续更新中...）</h2>
-  <div style="display: flex;">
+  <h2 class="row-title">基础知识demo（持续更新中...）</h2>
+  <div class="row">
     <div class="item">
       <a href="./1-model.html">1-模型制作</a>
     </div>
@@ -90,8 +228,8 @@
     </div>
   </div>
 
-  <h2>其它例子（持续更新中...）</h2>
-  <div >
+  <h2  class="row-title">其它例子（持续更新中...）</h2>
+  <div class="row">
     <div class="item">
       <a href="./points-flow.html">点流动</a>
     </div>
