feat: 修改图片路径使Pages部署正常。

--- a/src/project-demo/b-city/index.html
+++ b/src/project-demo/b-city/index.html
@@ -32,10 +32,10 @@
 	<body>
 		<div style="position: absolute;right:5px;top:5px; background-color:black;">
 			<a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-				<img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+				<img style="width:32px;height:32px;cursor: pointer;" src="../static/img/github.svg" >
 			</a>
 		</div>
 		<div id="loadingText" style="color: white;">加载中...</div>
-		<img id="warnIcon" alt="warn" class="icon twinkle" src="/static/img/warn.svg" >
+		<img id="warnIcon" alt="warn" class="icon twinkle" src="../static/img/warn.svg" >
 	</body>
 </html>
