--- a/src/fundamentals-demo/1-model/index.html
+++ b/src/fundamentals-demo/1-model/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div style="position: absolute;right:5px;top:5px; background-color:black;">
       <a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-        <img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+        <img style="width:32px;height:32px;cursor: pointer;" src="../static/img/github.svg" >
       </a>
 		</div>
 		
