--- a/src/index.html
+++ b/src/index.html
@@ -180,24 +180,24 @@
   
   <div style="position: absolute;right:5px;top:5px; background-color:black;">
     <a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-      <img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+      <img style="width:32px;height:32px;cursor: pointer;" src="./static/img/github.svg" >
     </a>
   </div>
 
   <h2 class="row-title">项目demo（持续更新中...）</h2>
   <div class="container">
     <div class="item">
-      <img src="/static/img/a-dismantling.png" >
+      <img src="./static/img/a-dismantling.png" >
      <a href="./a-dismantling.html">a-模型拆解效果</a>
   
     </div>
     <div class="item">
-      <img src="/static/img/b-city.png" >
+      <img src="./static/img/b-city.png" >
       <a href="./b-city.html">b-智慧城市</a>
     </div>
 
     <div class="item">
-      <img src="/static/img/c-datacenter.png" >
+      <img src="./static/img/c-datacenter.png" >
       <a href="./c-datacenter.html">c-数据中心</a>
     </div>
 
