--- a/src/other-example/limit-test-geometry/index.html
+++ b/src/other-example/limit-test-geometry/index.html
@@ -18,7 +18,7 @@
 
 		<div style="position: absolute;right:5px;top:5px; background-color:black;">
 			<a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-				<img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+				<img style="width:32px;height:32px;cursor: pointer;" src="../static/img/github.svg" >
 			</a>
     </div>
 
