--- a/src/project-demo/a-dismantling/index.html
+++ b/src/project-demo/a-dismantling/index.html
@@ -26,7 +26,7 @@
 				cursor: pointer;
 			}
 			body{
-				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(/static/img/bg.jpg);
+				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(../static/img/bg.jpg);
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
@@ -46,7 +46,7 @@
 	<body>
 		<div style="position: absolute;right:5px;top:5px; background-color:black;">
 			<a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-				<img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+				<img style="width:32px;height:32px;cursor: pointer;" src="../static/img/github.svg" >
 			</a>
 		</div>
 		<div id="loadingText" style="color: white;">加载中...</div>
