--- a/src/project-demo/c-datacenter/index.html
+++ b/src/project-demo/c-datacenter/index.html
@@ -32,7 +32,7 @@
 				color:white;
 				display: flex;
 				flex-direction: column;
-				background-image: url('/static/img//board.png');
+				background-image: url('../static/img//board.png');
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
@@ -60,7 +60,7 @@
 	<body>
 		<div style="position: absolute;right:5px;top:5px; background-color:black;">
 			<a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-				<img style="width:32px;height:32px;cursor: pointer;" src="/static/img/github.svg" >
+				<img style="width:32px;height:32px;cursor: pointer;" src="../static/img/github.svg" >
 			</a>
 		</div>
 
