--- a/src/other-example/points-flow/index.html
+++ b/src/other-example/points-flow/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>threejs-example other example : points flow</title>
 		<style>
 			body { margin: 0; }
