feat: 添加 动态改变面的材质。

--- a/src/index.html
+++ b/src/index.html
@@ -236,6 +236,10 @@
     <div class="item">
       <a href="./limit-test-geometry.html">极限测试-渲染数量</a>
     </div>
+
+    <div class="item">
+      <a href="./change-face-material.html">动态改变面的材质</a>
+    </div>
   </div>
   
 
