fix: 修复图片 路径异常问题。

--- a/src/fundamentals-demo/5-animation-picture/index.html
+++ b/src/fundamentals-demo/5-animation-picture/index.html
@@ -6,7 +6,7 @@
 
 			body{
 				margin: 0;
-				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(../static/img/bg.jpg);
+				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.jpg);
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
@@ -16,7 +16,7 @@
 	<body>
 		<div style="position: absolute;right:5px;top:5px; background-color:black;">
       <a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-        <img style="width:32px;height:32px;cursor: pointer;" src="../static/img/github.svg" >
+        <img style="width:32px;height:32px;cursor: pointer;" src="./static/img/github.svg" >
       </a>
     </div>
 
