--- a/src/index.html
+++ b/src/index.html
@@ -201,6 +201,11 @@
       <a href="./c-datacenter.html">c-数据中心</a>
     </div>
 
+    <div class="item">
+      <img src="./static/img/d-wireframe-transfer-effect.png" >
+      <a href="./d-wireframe-transfer-effect.html">d-线框转换效果</a>
+    </div>
+
   </div>
 
   <h2 class="row-title">基础知识demo（持续更新中...）</h2>
