feat: 添加点阵效果。

--- a/src/index.html
+++ b/src/index.html
@@ -245,6 +245,10 @@
     <div class="item">
       <a href="./change-face-material.html">动态改变面的材质</a>
     </div>
+
+    <div class="item">
+      <a href="./lattice-effect.html">点阵效果</a>
+    </div>
   </div>
   
 
