--- a/src/index.html
+++ b/src/index.html
@@ -249,6 +249,10 @@
     <div class="item">
       <a href="./lattice-effect.html">点阵效果</a>
     </div>
+
+    <div class="item">
+      <a href="./fresnel.html">fresnel效果</a>
+    </div>
   </div>
   
 
