refactor: 将github图标修改成js文件，引用进来使用。

--- a/src/fundamentals-demo/6-calculate-position/index.html
+++ b/src/fundamentals-demo/6-calculate-position/index.html
@@ -23,12 +23,6 @@
 		</style>
 	</head>
 	<body>
-    <div style="position: absolute;right:5px;top:5px; background-color:black;">
-      <a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-        <img style="width:32px;height:32px;cursor: pointer;" src="./static/img/github.svg" >
-      </a>
-    </div>
-
     <div style="display: flex;flex-direction: column; font-size: 24px;text-align: center;">
       <div style="height: 10vh;border: 1px solid black;background: burlywood;"> 标题占位</div>
       <div style="display: flex;">
@@ -47,4 +41,5 @@
     </div>
     
 	</body>
+  <script src="./static/js/add-github-icon.js"></script>
 </html>
