--- a/src/fundamentals-demo/7-open-door/index.html
+++ b/src/fundamentals-demo/7-open-door/index.html
@@ -11,12 +11,7 @@
 		</style>
 	</head>
 	<body>
-		<div style="position: absolute;right:5px;top:5px; background-color:black;">
-      <a href="https://github.com/alwxkxk/threejs-example" target="_blank" >
-        <img style="width:32px;height:32px;cursor: pointer;" src="./static/img/github.svg" >
-      </a>
-		</div>
-		
 
 	</body>
+	<script src="./static/js/add-github-icon.js"></script>
 </html>
