--- a/src/index.html
+++ b/src/index.html
@@ -226,6 +226,9 @@
     <div class="item">
       <a href="./8-focus.html">8-聚焦靠近</a>
     </div>
+    <div class="item">
+      <a href="./9-capacity-model.html">9-容量模式</a>
+    </div>
   </div>
 
   <h2  class="row-title">其它例子（持续更新中...）</h2>
