refactor: 优化 a-dismantling。

--- a/src/project-demo/a-dismantling/index.html
+++ b/src/project-demo/a-dismantling/index.html
@@ -26,7 +26,7 @@
 				cursor: pointer;
 			}
 			body{
-				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.jpg);
+				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.webp);
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
