feat: 重做首页，优化3D文件。

--- a/src/fundamentals-demo/5-animation-picture/index.html
+++ b/src/fundamentals-demo/5-animation-picture/index.html
@@ -6,7 +6,7 @@
 
 			body{
 				margin: 0;
-				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.jpg);
+				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.webp);
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
