--- a/src/fundamentals-demo/9-capacity-model/index.html
+++ b/src/fundamentals-demo/9-capacity-model/index.html
@@ -4,7 +4,7 @@
 		<title>threejs-example 9-capacity-model</title>
 		<style>
 			body{
-				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.jpg);
+				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.webp);
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
