feat: 完成c-global 基本功能。

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,16 @@
       </div>
     </div>
 
+    <div class="card box-container" >
+      <a href="./c-global.html" target="_blank">
+        <img src="./static/img/c-global.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">世界地图<span class="badge bg-warning rounded-pill">待优化</span></h5>
+        <p class="card-text">世界地图</p>
+      </div>
+    </div>
+
 
   </div>
  
@@ -225,7 +235,7 @@
         <img src="./static/img/wireframe-transfer-effect.webp" class="card-img">
       </a>
       <div class="card-body" >
-        <h5 class="card-title">线框转换<span class="badge bg-warning rounded-pill">有待优化</span></h5>
+        <h5 class="card-title">线框转换<span class="badge bg-warning rounded-pill">待优化</span></h5>
         <p class="card-text">从实体切到线框的过渡效果。</p>
       </div>
     </div>
