feat: 添加地球模型的数据流效果。

--- a/src/fundamentals-demo/10-curve-move/index.html
+++ b/src/fundamentals-demo/10-curve-move/index.html
@@ -4,7 +4,7 @@
 		<title>threejs-example 10-curve-move</title>
 		<style>
 			body{
-				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) , url(./static/img/bg.webp);
+				background-image: linear-gradient(rgba(0,0,50, 0.4),rgba(0,0,50,0.9)) ,url(./static/img/starry-sky.webp);
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
