--- a/src/index.html
+++ b/src/index.html
@@ -92,22 +92,22 @@
     </div>
 
     <div class="card box-container" >
+      <a href="./c-global.html" target="_blank">
+        <img src="./static/img/c-global.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">地球</h5>
+        <p class="card-text">地球模型的数据流效果</p>
+      </div>
+    </div>
+
+    <div class="card box-container" >
       <a href="http://3diot.scaugreen.cn" target="_blank">
         <img src="./static/img/datacenter.webp" class="card-img">
       </a>
       <div class="card-body" >
         <h5 class="card-title">数据中心设备房<span class="badge bg-primary rounded-pill">高级</span></h5>
         <p class="card-text">开机柜门、容量模式、热力场等多种效果。</p>
-      </div>
-    </div>
-
-    <div class="card box-container" >
-      <a href="./c-global.html" target="_blank">
-        <img src="./static/img/c-global.webp" class="card-img">
-      </a>
-      <div class="card-body" >
-        <h5 class="card-title">世界地图<span class="badge bg-warning rounded-pill">待优化</span></h5>
-        <p class="card-text">世界地图</p>
       </div>
     </div>
 
