fix: 修复地球数据流在github page上图片路径异常问题。

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
         <img src="./static/img/c-global.webp" class="card-img">
       </a>
       <div class="card-body" >
-        <h5 class="card-title">地球</h5>
+        <h5 class="card-title">地球数据流</h5>
         <p class="card-text">地球模型的数据流效果</p>
       </div>
     </div>
