feat: 添加金属材质效果。

--- a/src/index.html
+++ b/src/index.html
@@ -290,6 +290,16 @@
       </div>
     </div>
 
+    <div class="card box-container" >
+      <a href="./metal.html" target="_blank">
+        <img src="./static/img/metal.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">金属材质效果</h5>
+        <p class="card-text">金属材质效果</p>
+      </div>
+    </div>
+
   </div>
   
 </body>
