feat: 添加 apng材质播放。

--- a/src/index.html
+++ b/src/index.html
@@ -300,6 +300,16 @@
       </div>
     </div>
 
+    <div class="card box-container" >
+      <a href="./apng-texture.html" target="_blank">
+        <img src="./static/img/apng-texture.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">apng材质</h5>
+        <p class="card-text">播放apng的材质</p>
+      </div>
+    </div>
+
   </div>
   
 </body>
