feat: 添加 摄像头灯光跟随，待场景优化。

--- a/src/fundamentals-demo/7-open-door/index.html
+++ b/src/fundamentals-demo/7-open-door/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>threejs-example 1-model</title>
+		<title>threejs-example 7-open-door</title>
 		<style>
 			body { 
 				margin: 0;
