feat: 添加 建筑颜色分层初步demo。

--- a/src/index.html
+++ b/src/index.html
@@ -310,6 +310,16 @@
       </div>
     </div>
 
+    <div class="card box-container" >
+      <a href="./building-color.html" target="_blank">
+        <img src="./static/img/points-flow.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">建筑颜色分层<span class="badge bg-warning rounded-pill">待优化</span></h5>
+        <p class="card-text">建筑从下至下颜色分层，达到层次感。</p>
+      </div>
+    </div>
+
   </div>
   
 </body>
