--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,16 @@
       </div>
     </div>
 
+    <div class="card box-container" >
+      <a href="./d-CNN.html" target="_blank">
+        <img src="./static/img/points-flow.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">人工智能算法<span class="badge bg-warning rounded-pill">待优化</span></h5>
+        <p class="card-text">三维呈现矩阵运算效果。</p>
+      </div>
+    </div>
+
 
   </div>
  
@@ -146,7 +156,7 @@
       </a>
       <div class="card-body" >
         <h5 class="card-title">3.光线痕迹</h5>
-        <p class="card-text">讲解模型数据，没有例子。<a target="_blank" href="https://www.scaugreen.cn/posts/5988/">【教程】</a></p>
+        <p class="card-text">讲解光线效果。<a target="_blank" href="https://www.scaugreen.cn/posts/5988/">【教程】</a></p>
       </div>
     </div>
 
@@ -317,6 +327,16 @@
       <div class="card-body" >
         <h5 class="card-title">建筑颜色分层<span class="badge bg-warning rounded-pill">待优化</span></h5>
         <p class="card-text">建筑从下至下颜色分层，达到层次感。</p>
+      </div>
+    </div>
+
+    <div class="card box-container" >
+      <a href="./camera-light.html" target="_blank">
+        <img src="./static/img/points-flow.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">摄像头灯光<span class="badge bg-warning rounded-pill">待优化</span></h5>
+        <p class="card-text">让灯光跟着摄像头。</p>
       </div>
     </div>
 
