--- a/src/other-example/camera-light/index.html
+++ b/src/other-example/camera-light/index.html
@@ -24,8 +24,8 @@
 	</head>
 	<body>
         <div style="position: absolute;right:10px;bottom: 10px;">
-            <button id="camera1-btn" class="btn-active">摄像头1</button>
-            <button id="camera2-btn">摄像头2</button>
+            <button id="camera1-btn" class="btn-active">不带灯光的摄像头</button>
+            <button id="camera2-btn">带灯光的摄像头</button>
         </div>
 	</body>
 	<script src="./static/js/add-github-icon.js"></script>
