feat: 全球工程的文字效果优化。

--- a/src/project-demo/c-global/index.html
+++ b/src/project-demo/c-global/index.html
@@ -14,19 +14,21 @@
 			.info-box{
 				position: absolute;
 				bottom: 10px;
-				min-height: 50vh;
-				max-height: 50vh;
+				height: 300px;
 				width: 240px;
 				left: 10px;
 				background-color: rgba(17, 34, 78, 0.74);
 				overflow-y: scroll;
     			overflow-x: hidden;
+				display: flex;
+   				 flex-wrap: wrap;
 			}
 			.info-box-item{
 				color:rgb(236, 236, 236);
 				padding: 10px;
 				font-size: small;
 			}
+
 
 			::-webkit-scrollbar {
 				width: 4px; 
