feat: 添加移动至碰撞点的例子。

--- a/src/index.html
+++ b/src/index.html
@@ -340,6 +340,16 @@
       </div>
     </div>
 
+    <div class="card box-container" >
+      <a href="./move-collide.html" target="_blank">
+        <img src="./static/img/move-collide.webp" class="card-img">
+      </a>
+      <div class="card-body" >
+        <h5 class="card-title">键盘移动与移动至碰撞点</h5>d
+        <p class="card-text">键盘移动以及可移动直至让物体碰撞的位置。</p>
+      </div>
+    </div>
+
   </div>
   
 </body>
